--- a/client/main.html
+++ b/client/main.html
@@ -9,7 +9,7 @@
       </div>
     </header>
     <div id="main" class="row-fluid">
-      LIST POSTS BY TIME PERIOD - WEEK?
+      {{> postsList}}
     </div>
   </div>
 </body>
