Update to 1.0.1 and logo

--- a/client/main.html
+++ b/client/main.html
@@ -1,3 +1,4 @@
 <head>
   <title>Trailer Park: Post, discuss and rate the latest film trailers</title>
+  <link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
 </head>
