--- a/client/main.html
+++ b/client/main.html
@@ -1,4 +1,5 @@
 <head>
   <title>Trailer Park: Post, discuss and rate the latest film trailers</title>
-  <link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet' type='text/css'>
 </head>
