--- a/client/main.html
+++ b/client/main.html
@@ -1,4 +1,8 @@
 <head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta name="author" content="David Thompson" />
   <title>Trailer Park: Post, discuss and rate the latest film trailers</title>
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,800' rel='stylesheet' type='text/css'>
 </head>
